// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphEngine snapshot > renders deterministically across ticks 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(76.5, 178.5, 255, 1)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      520,
      400,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(76.5, 178.5, 255, 1)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.990525304458,
      398.4920752139977,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(76.5, 178.5, 255, 1)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.962102713996,
      396.9843885467995,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`GraphEngine snapshot > renders deterministically across ticks 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(127.5, 127.5, 127.5, 0.5)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      520,
      400,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "set",
    "name": "strokeStyle",
    "value": "rgba(127.5, 127.5, 127.5, 0.5)",
  },
  {
    "kind": "set",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.962102713996,
      396.9843885467995,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;
